# WebAssembly-obfuscator

./: CMakeLists.txt  README.md
src/: junk-code-insertion.cc  junk-code-insertion.h  obfuscator.cc  obfuscator.h  wast-parser.cc  wat2wasm.cc
src/tools/: wat-obfuscator.cc  wat2wasm.cc
